# bleater

./: .gitignore  Dockerfile  README.md  example.py  minimal.py  pyproject.toml
.github/workflows/: build-image.yaml
src/: example.py
src/bleater/: __init__.py  config.py
src/bleater/farm/: __init__.py  herd.py  lama.py  llama.py  model.py  tools.py
src/bleater/farm/templates/: system_prompt.jinja  user_prompt.jinja
src/bleater/models/: __init__.py  messages.py  posts.py  users.py
src/bleater/server/: __init__.py  api.py  app.py  feed.py  storage.py  views.py
src/bleater/server/assets/: sqlite_init.sql
src/bleater/server/templates/: base.jinja  feed.jinja  thread.jinja  user.jinja  user_list.jinja
