[project]
name = "bleater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maciek.glowka", email = "maciek.glowka@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff-lsp>=0.0.62",
    "ty>=0.0.14",
]
